// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

/*
Notes

  - "required" fields are not used as recommended by Google to keep forward-compatibility:
    https://developers.google.com/protocol-buffers/docs/proto#simple

  - this is beta version of specification. It will evolve during next releases and is
    not forward-compatible yet.
*/

syntax = "proto2";

import "constants.proto";

option java_package = "org.sonar.scanner.protocol.input";
option optimize_for = SPEED;

message ServerIssue {
    optional string key = 1;
    optional string module_key = 2;
    optional string path = 3;
    optional string rule_repository = 4;
    optional string rule_key = 5;
    optional int32 line = 6;
    optional string msg = 7;
    optional Severity severity = 8;
    optional bool manual_severity = 9;
    optional string resolution = 10;
    optional string status = 11;
    optional string checksum = 12;
    optional string assignee_login = 13;
    optional int64 creation_date = 14;
    optional string type = 15;
}

message User {
    optional string login = 1;
    optional string name = 2;
}
